[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/TorusMode.gd" type="Script" id=1]
[ext_resource path="res://Scripts/Position3D2.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Position3D.gd" type="Script" id=3]
[ext_resource path="res://Scripts/Camera.gd" type="Script" id=4]
[ext_resource path="res://Scenes/FoldUnfold.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Torus.tscn" type="PackedScene" id=6]

[sub_resource type="Environment" id=1]
background_mode = 1
background_color = Color( 0.184314, 0.662745, 0.709804, 1 )

[sub_resource type="Animation" id=2]
resource_name = "ToStartCamera"
tracks/0/type = "value"
tracks/0/path = NodePath("HorizontalMovement/VerticalMovement/Camera:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 3, 4 ), Vector3( 0, 0, 1.5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HorizontalMovement/VerticalMovement/Camera:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( -40, 0, 0 ), Vector3( 0, 0, 0 ) ]
}

[node name="TorusMode" type="Spatial"]
script = ExtResource( 1 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )

[node name="HorizontalMovement" type="Position3D" parent="." groups=[
"CameraMovement",
]]
script = ExtResource( 2 )

[node name="VerticalMovement" type="Position3D" parent="HorizontalMovement" groups=[
"CameraMovement",
]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1.5 )
script = ExtResource( 3 )

[node name="Camera" type="Camera" parent="HorizontalMovement/VerticalMovement"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1.5 )
current = true
fov = 77.0
script = ExtResource( 4 )

[node name="RayCast" type="RayCast" parent="HorizontalMovement/VerticalMovement/Camera"]
enabled = true

[node name="FoldUnfold" parent="." instance=ExtResource( 5 )]

[node name="Torus" parent="." instance=ExtResource( 6 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/ToStartCamera = SubResource( 2 )

[node name="Meshes" type="Spatial" parent="."]

